<?xml version="1.0"?>
<package format="3">
  <name>rack_pinion_controller</name>
  <version>0.1.0</version>
  <description>The rack_pinion_controller package</description>

  <maintainer email="slizevskijegor@gmail.com">Egor Slizevksij</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>ackermann_steering_controller</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>urdf</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin="${prefix}/plugin.xml"/>
  </export>
</package>
